# pants-python-cookiecutter

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG.md  CODEOWNERS  Makefile  README.md  pants.toml
{{cookiecutter.project_slug}}/.github/actions/setup-env/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: lint-pr-title.yaml
{{cookiecutter.project_slug}}/ci/: BUILD  ci_tools_requirements.txt  lint_pr_title.py
